# eidos

./: .dockerignore  .env.template  .gitignore  Dockerfile  Dockerfile.lambda  Makefile  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: build.yaml  docs.yml  test.yaml
deployments/: README.md  eidos-deployment.yaml
examples/: with_openai.py
examples/joke/: Dockerfile  README.md  chat.py  joke.json  setup.py
examples/joke/app/: main.py
functions/: geocode.json  get_coordinates_by_location.json  hello_world.json  salute.json  search.json  zero_shot_classification.json
manifests/: README.md
scripts/: openapi.py
src/eidos/: __init__.py  __main__.py  api.py  execute.py  execution.py  intention.py  lambda.py  logs.py  secure.py  settings.py  utils.py
src/eidos/api/: __init__.py  app.py  secure.py
src/eidos/api/routes/: execute.py  execution.py  functions.py
src/eidos/functions/: classification.py  core.py
src/eidos/models/: function.py  parameter.py
src/eidos/routes/: execution.py  functions.py
src/eidos/validation/: schema.py  type.py
tests/: README.md  development.postman_environment.json  eidos-api-testing.postman_collection.json  test_models.py  test_routes.py  test_utils.py  test_validation.py
